# smart_reader

./: .gitignore  AGENTS.md  AUDIT_FIX_PLAN.md  AUDIT_REPORT.html  AUDIT_REPORT_COMMERCIAL_2026-07-13.html  AUDIT_REVIEW_2026-07-11.html  CHANGELOG.md  CODE_REVIEW.md  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: cd.yml  ci-full.yml  ci-quick.yml  ci.yml  landing.yml  release.yml
docs/: AGENT_TOOLS_DESIGN.md  AGENT_TOOLS_PHASE1_PLAN.md  AUDIT_FIX_PLAN.md  FEATURE_PLAN.md  LLM_AGENT_DESIGN.md  LLM_PLATFORM_COMPATIBILITY.md  LOGGING_AUDIT.md  PDF_RENDERING_AND_OVERLAYS.md  PRD.md  REFACTOR_PLAN.md  REFACTOR_REVIEW_2026-07-17.md  TAB_STATE_ISOLATION_PLAN.md
docs/reviews/: CODE_REVIEW_2026-07-23.md  CODE_REVIEW_2026-07-24.md
e2e/: app.spec.ts  multi-tab-state.spec.ts  pdf-large-doc.spec.ts  pdf-page-jump.spec.ts  pdf-rapid-zoom.spec.ts  pdf-selection-translate.spec.ts
landing/: README.md  index.html
landing/css/: style.css
landing/js/: main.js
public/: LICENSE.txt
scripts/: bump-version.mjs  gen-sample-long-pdf.mjs  gen-sample-pdf.mjs  gen-sample-short-pdf.mjs  prepare-release.mjs
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dictionary.rs  lib.rs  llm_proxy.rs  main.rs  paths.rs  secure_storage.rs
src/components/: AiChatPanel.css  AiChatPanel.test.tsx  AiChatPanel.tsx  AnnotationMarker.css  AnnotationMarker.test.tsx  AnnotationMarker.tsx  CommentPopup.css  CommentPopup.test.tsx  CommentPopup.tsx  ContextWidget.css  ContextWidget.tsx  CustomInterpretModal.css  CustomInterpretModal.test.tsx  CustomInterpretModal.tsx  ErrorBanner.tsx  ErrorBoundary.css  ErrorBoundary.tsx  ExplainPopup.css  ExplainPopup.test.tsx  ExplainPopup.tsx  Icon.tsx  MarkdownRenderer.css  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  PageJumpPanel.css  PageJumpPanel.test.tsx  PageJumpPanel.tsx  PageRail.css  PageRail.tsx  PdfAnnotations.test.tsx  PdfAnnotations.tsx  PdfPage.css  PdfPage.test.tsx  PdfPage.tsx  PdfViewer.css  PdfViewer.keyboard.test.tsx  PdfViewer.pageJump.test.tsx  PdfViewer.state.test.tsx  PdfViewer.tsx  PdfViewer.zoom.test.tsx  (+22 more)
src/data/: platformPresets.ts
src/hooks/: useClampedPopupPosition.ts  useDictionaryStatus.ts  useDictionaryStatus.tsx  useDrag.test.tsx  useDrag.ts  useModal.ts  usePdfDocument.ts  usePersistence.test.tsx  usePersistence.ts  useRecentFiles.test.ts  useRecentFiles.ts  useRightPanelLayout.ts  useScrollPageSync.test.tsx  useScrollPageSync.ts  useSearchDomain.test.tsx  useSearchDomain.ts  useSplitView.test.ts  useSplitView.ts  useStreaming.ts  useTabRestore.test.tsx  useTabRestore.ts  useTabs.ts  (+6 more)
(+43 files in other folders)
