[package]
name = "app"
version = "0.5.0"
description = "AI assistant for reading and interpreting standard PDFs"
authors = ["SpecReader AI Team"]
license = "Proprietary"
repository = "https://github.com/photonee/specreader-ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sha2 = "0.10"
hex = "0.4"
open = "5"
tempfile = "3"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
